fixed global letter spacing of texts

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,7 @@
   font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
   font-weight: 400;
+  letter-spacing: -0.25px;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
